HID-1588 - fixed alignment on firefox

--- a/src/app/common/_tables.scss
+++ b/src/app/common/_tables.scss
@@ -247,6 +247,7 @@
   .table__fixed {
     .table__td-primary {
       width: 750px;
+      max-width: 1000px;
     }
   }
 }
